[package]
name = "thunder"
version = "0.1.0"
edition = "2024"

[features]
default = []
io_uring = ["dep:io-uring"]

[dependencies]
libc = "0.2.178"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[[bin]]
name = "thunder_bench"
path = "bench/thunder_bench.rs"
